--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vendure-bulk-discounts",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "main": "./index.js",
   "description": "Adds bulk discounts to vendure",
   "repository": "https://github.com/Tyratox/vendure-bulk-discounts",
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf lib && tsc && cp package.json ./lib/ && cp README.md ./lib/ && cp -r ./src/ui-extensions ./lib/ui-extensions",
-	"build-publish": "yarn build && cd lib && yarn publish && cd .."
+    "build-publish": "yarn build && cd lib && yarn publish && cd .."
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
@@ -18,15 +18,17 @@
     "@types/prosemirror-model": "^1.7.2",
     "@types/prosemirror-state": "^1.2.3",
     "@types/prosemirror-view": "^1.11.4",
-    "@vendure/admin-ui-plugin": "^0.11.0",
+    "@vendure/admin-ui-plugin": "^0.12.5",
     "@vendure/common": "^0.11.0",
-    "@vendure/core": "^0.11.0",
-    "@vendure/ui-devkit": "^0.11.0",
+    "@vendure/core": "^0.12.5",
+    "@vendure/ui-devkit": "^0.12.5",
     "ng-packagr": "^9.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@vendure/asset-server-plugin": "^0.12.5",
+    "@vendure/email-plugin": "^0.12.5",
     "tslib": "^1.11.1"
   },
   "peerDependencies": {
