--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vendure-bulk-discounts",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "main": "./index.js",
   "description": "Adds bulk discounts to vendure",
   "repository": "https://github.com/Tyratox/vendure-bulk-discounts",
@@ -18,10 +18,10 @@
     "@types/prosemirror-model": "^1.7.2",
     "@types/prosemirror-state": "^1.2.3",
     "@types/prosemirror-view": "^1.11.4",
-    "@vendure/admin-ui-plugin": "^0.18.1",
-    "@vendure/common": "^0.18.1",
-    "@vendure/core": "^0.18.1",
-    "@vendure/ui-devkit": "^0.18.1",
+    "@vendure/admin-ui-plugin": "^1.0.0-beta.4",
+    "@vendure/common": "^1.0.0-beta.4",
+    "@vendure/core": "^1.0.0-beta.4",
+    "@vendure/ui-devkit": "^1.0.0-beta.4",
     "ng-packagr": "^9.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
